feat(PMB-9 & PMB-10):create connexion page and allow register user to connect with their mail and password

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -3,6 +3,7 @@
 
 <head th:replace="fragment/header :: commonHeader('Register - Pay My Buddy')">
     <link rel="stylesheet" href="/css/register.css">
+    <title>'Register - Pay My Buddy'</title>
 </head>
 
 <body>
