featu(PMB-19): create transfer page

--- a/src/main/resources/templates/fragment/header.html
+++ b/src/main/resources/templates/fragment/header.html
@@ -5,4 +5,5 @@
     <title th:text="${title}">default title</title>
     <link rel="stylesheet" href="/css/register.css" th:if="${title == 'Register - Pay My Buddy'}">
     <link rel="stylesheet" href="/css/login.css" th:if="${title == 'Login - Pay My Buddy'}">
+    <link rel="stylesheet" href="/css/transfer.css" th:if="${title == 'Home-Tranfer - Pay My Buddy'}">
 </head>
