--- a/src/main/resources/templates/home/transfer.html
+++ b/src/main/resources/templates/home/transfer.html
@@ -7,57 +7,58 @@
 </head>
 
 <body>
-    <div th:replace="fragment/header-connected :: connectedHeader"></div>
+<div th:replace="fragment/header-connected :: connectedHeader"></div>
 
-    <div class="transfer-form">
-        <div class = "transfer-item">
-            <select id="friendSelect">
-                <option value="" disabled selected>Sélectionner une relation</option>
-            </select>
-        </div>
+<div class="transfer-form">
+    <div class="transfer-item">
+        <select id="friendSelect">
+            <option value="" disabled selected>Sélectionner une relation</option>
+        </select>
+    </div>
 
-        <div class = "transfer-item">
-            <label for="descriptionInput" class="sr-only"></label>
-            <input type="text"
+    <div class="transfer-item">
+        <label for="descriptionInput" class="sr-only"></label>
+        <input type="text"
                id="descriptionInput"
                placeholder="Description"
                maxlength="30"
                class="description-input"
-            >
-        </div>
-
-        <div class="transfer-item amount-item">
-            <label for="amountInput" class="sr-only"></label>
-            <input  type ="number"
-                    id="amountInput"
-                    placeholder="0€"
-                    min="0"
-                    step="1"
-                    class="amount-input"
-            >
-        </div>
-
-        <div class="transfer-item">
-            <button class="submit-button" onclick="submitTransfer()">Payer</button>
-            <div id="transferMessage" class="transfer-message"></div>
-        </div>
+               style="color: black"
+        >
     </div>
 
-    <div class="transactions-section">
-        <h2>Mes Transactions</h2>
-        <table id="transactionsTable">
-            <thead>
-            <tr>
-                <th>Relations</th>
-                <th>Description</th>
-                <th>Montant</th>
-            </tr>
-            </thead>
-            <tbody>
-
-            </tbody>
-        </table>
+    <div class="transfer-item amount-item">
+        <label for="amountInput" class="sr-only"></label>
+        <input type="number"
+               id="amountInput"
+               placeholder="0€"
+               min="0"
+               step="1"
+               class="amount-input"
+        >
     </div>
+
+    <div class="transfer-item">
+        <button class="submit-button" onclick="submitTransfer()">Payer</button>
+        <div id="transferMessage" class="transfer-message"></div>
+    </div>
+</div>
+
+<div class="transactions-section">
+    <h2>Mes Transactions</h2>
+    <table id="transactionsTable">
+        <thead>
+        <tr>
+            <th>Relations</th>
+            <th>Description</th>
+            <th>Montant</th>
+        </tr>
+        </thead>
+        <tbody>
+
+        </tbody>
+    </table>
+</div>
 
 </body>
 </html>
@@ -88,16 +89,16 @@
         }
     }
 
-    async function submitTransfer(){
+    async function submitTransfer() {
         const friendName = document.getElementById('friendSelect').value;
         const description = document.getElementById('descriptionInput').value;
         const amount = document.getElementById('amountInput').value;
 
-        const transfer = {friendName,description,amount};
+        const transfer = {friendName, description, amount};
 
         const messageContainer = document.getElementById('transferMessage');
-        messageContainer.textContent="";
-        messageContainer.classList.remove('success','error');
+        messageContainer.textContent = "";
+        messageContainer.classList.remove('success', 'error');
         try {
             const response = await fetch('/transactions/v1/me', {
                 method: 'POST',
@@ -109,18 +110,18 @@
 
             if (response.ok) {
                 messageContainer.classList.add('success');
-                messageContainer.textContent=textResponse;
+                messageContainer.textContent = textResponse;
 
                 await loadTransactions()
-            }else {
+            } else {
                 messageContainer.classList.add('error');
-                messageContainer.textContent="Erreur: " +textResponse;
+                messageContainer.textContent = "Erreur: " + textResponse;
             }
         } catch (err) {
-                console.error("Erreur réseau:", err);
-                messageContainer.classList.add('error');
-                messageContainer.textContent = "Erreur réseau, réessayez.";
-            }
+            console.error("Erreur réseau:", err);
+            messageContainer.classList.add('error');
+            messageContainer.textContent = "Erreur réseau, réessayez.";
+        }
     }
 
     async function loadTransactions() {
