feat(PMB-21): create profil page

--- a/src/main/resources/static/css/profil.css
+++ b/src/main/resources/static/css/profil.css
@@ -1,6 +1,5 @@
 @import url('header-connected.css');
-@import url('transfer-form.css');
-@import url('transfer-historic-table.css');
+@import url('profil-form.css');
 
 body {
     margin: 60px;
