--- a/src/main/resources/templates/fragment/header-connected.html
+++ b/src/main/resources/templates/fragment/header-connected.html
@@ -9,9 +9,9 @@
             Transférer
         </a>
 
-        <a href="/home/profile"
+        <a href="/home/profil"
            class="nav-item"
-           th:classappend="${currentPath== '/home/profile'} ? ' active'">
+           th:classappend="${currentPath== '/home/profil'} ? ' active'">
             Profil
         </a>
 
