--- a/src/main/resources/templates/fragment/header.html
+++ b/src/main/resources/templates/fragment/header.html
@@ -7,4 +7,5 @@
     <link rel="stylesheet" href="/css/login.css" th:if="${title == 'Login - Pay My Buddy'}">
     <link rel="stylesheet" href="/css/transfer.css" th:if="${title == 'Home-Tranfer - Pay My Buddy'}">
     <link rel="stylesheet" href="/css/friends-add.css" th:if="${title == 'Home-Add-Friends - Pay My Buddy'}">
+    <link rel="stylesheet" href="/css/profil.css" th:if="${title == 'Home-Profil - Pay My Buddy'}">
 </head>
