--- a/src/main/resources/static/css/header-connected.css
+++ b/src/main/resources/static/css/header-connected.css
@@ -7,15 +7,16 @@
     border-radius: 8px;
     font-weight: bold;
     position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
+    top: 45px;
+    left: 60px;
+    right: 60px;
+    width: auto;
     z-index: 1000;
     box-sizing: border-box;
 }
 
 .header-left .logo {
-    font-size: 20px;
+    font-size: 30px;
     font-weight: normal;
 }
 
@@ -27,7 +28,7 @@
 .header-right .nav-item {
     color: black;
     text-decoration: none;
-    font-size: 14px;
+    font-size: 18px;
     font-weight: normal;
 }
 
