feat(PMB-22): add logout functionnality

--- a/src/main/resources/templates/fragment/header-connected.html
+++ b/src/main/resources/templates/fragment/header-connected.html
@@ -21,9 +21,8 @@
             Ajouter Relation
         </a>
 
-        <a href="/home/auth/logout"
-           class="nav-item"
-           th:classappend="${currentPath== '/home/auth/logout'} ? ' active'">
+        <a href="/auth/logout"
+           class="nav-item">
             Se déconnecter
         </a>
     </nav>
