--- a/src/main/resources/templates/home/friendsAdd.html
+++ b/src/main/resources/templates/home/friendsAdd.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="fr">
 
-<head th:replace="fragment/header :: commonHeader('Home-Add-Friends - Pay My Buddy')">
-    <link rel="stylesheet" href="/css/friends-add.css">
-    <title>Friend add </title>
+<head th:replace="fragment/header :: commonHeader('Home-Add-Friends - Pay My Buddy','/css/friends-add.css')">
 </head>
 <body>
     <div th:replace="fragment/header-connected :: connectedHeader"></div>
