--- a/src/main/resources/templates/home/profil.html
+++ b/src/main/resources/templates/home/profil.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="fr">
 
-<head th:replace="fragment/header :: commonHeader('Home-Profil - Pay My Buddy')">
-    <link rel="stylesheet" href="/css/profil.css">
+<head th:replace="fragment/header :: commonHeader('Home-Profil - Pay My Buddy','/css/profil.css')">
     <title>Profil</title>
 </head>
 
