--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="fr">
 
-<head th:replace="fragment/header :: commonHeader('Login - Pay My Buddy')">
-    <link rel="stylesheet" href="/css/login.css">
+<head th:replace="fragment/header :: commonHeader('Login - Pay My Buddy','/css/login.css')">
 </head>
 
 <body>
