--- a/src/main/resources/templates/home/transfer.html
+++ b/src/main/resources/templates/home/transfer.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="fr">
 
-<head th:replace="fragment/header :: commonHeader('Home-Tranfer - Pay My Buddy')">
-    <link rel="stylesheet" href="/css/transfer.css">
-    <title>Transfer</title>
+<head th:replace="fragment/header :: commonHeader('Home-Tranfer - Pay My Buddy','/css/transfer.css')">
 </head>
 
 <body>
