--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" lang="fr">
 
-<head th:replace="fragment/header :: commonHeader('Register - Pay My Buddy')">
-    <link rel="stylesheet" href="/css/register.css">
+<head th:replace="fragment/header :: commonHeader('Register - Pay My Buddy','/css/register.css')">
     <title>'Register - Pay My Buddy'</title>
 </head>
 
